Fix #2915: sidebar breaking on mobile

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -578,12 +578,12 @@ textarea {
 
 .oppia-sidebar-menu {
   background: #fff;
-  height: 100%;
+  height: 100vh;
   left: 0;
   position: fixed;
   top: 0;
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
+  -webkit-transform: translate3d(-100vh, 0, 0);
+  transform: translate3d(-100vh, 0, 0);
   width: 270px;
   z-index: 100;
 }
@@ -595,7 +595,7 @@ textarea {
   background: rgba(0,0,0,0.2);
   content: '';
   display: none;
-  height: 100%;
+  height: 100vh;
   opacity: 1;
   position: absolute;
   right: 0;
